# bgg-predictive-models

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.scoring  Dockerfile.streamlit  Dockerfile.training  Makefile  README.md  config.yaml  docker-compose.yml  evaluate.py  justfile  local_cloud_predictions_test.py  main.py  model_config.yml  predict.py  pyproject.toml  register.py  train.py
.clinerules/: uv-tool.md
.githooks/: post-commit  pre-push
.github/workflows/: cloud_predictions.yml  deploy-streamlit.yml  deploy_scoring_service.yml  docker-collections-build.yml  docker-embeddings-build.yml  docker-scoring-build.yml  docker-text-embeddings-build.yml  docker-training-build.yml  release-docker-images.yml  run-collection-scoring.yml  run-complexity-scoring.yml  run-generate-embeddings.yml  run-generate-text-embeddings.yml  run-scoring-service.yml  run-training.yml  terraform.yml
config/: bigquery.yaml
docker/: collections.Dockerfile  embeddings.Dockerfile  scoring.Dockerfile  streamlit.Dockerfile  text_embeddings.Dockerfile
docs/: MIGRATION_GCP_PROJECT.md
docs/designs/: collection-modules.md
docs/plans/: 2026-01-26-outcome-models-refactor.md  2026-02-04-config-driven-finalize-pipeline.md  2026-02-04-scoring-service-integration.md  2026-02-05-simulate-games-production-scoring.md  2026-03-03-simulation-dashboard-design.md  2026-03-03-simulation-dashboard.md  2026-03-04-local-experiments-page-design.md  2026-03-04-local-experiments-page.md  2026-03-09-experiments-data-tab-design.md  2026-03-09-experiments-data-tab.md  2026-03-10-rankings-and-publisher-fixes.md  2026-03-31-publications-setup.md  2026-03-31-services-reorganization.md  2026-04-20-collection-modules.md  2026-04-27-justfile-orchestration.md  2026-04-28-preprocessor-kwargs-design.md  (+1 more)
embeddings_service/: __init__.py  main.py  register_model.py  registered_model.py
notebooks/: collection_walkthrough.qmd  row_norm_debug.qmd
references/: allow_list.txt  sketch.excalidraw  unsupervised_tasks
scoring_service/: Dockerfile  README.md  auth.py  cloud_experiment_tracker.py  cloudbuild.yaml  main.py  pyproject.toml  register_model.py  registered_model.py  score.py  verify_models.py
scripts/: explain_game.py  score_uk_games_expo_2026.py
terraform/: artifact_registry.tf  bigquery.tf  collection_models_registry.tf  collection_predictions_landing.tf  gcs.tf  iam.tf  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_authentication.py  test_auto_preprocessor.py  test_bgg_preprocessor.py  test_cloud_services.py  test_collection_artifact_storage_local.py  test_collection_integration.py  test_collection_loader.py  test_collection_loader_filter.py  test_collection_loader_preprocess.py  test_collection_oof.py  test_collection_outcomes.py  test_collection_pipeline.py  test_collection_processor.py  test_collection_processor_integration.py  test_collection_processor_load_features.py  test_collection_smoke.py  test_collection_splitter.py  test_collection_storage.py  test_collections_register_model.py  test_collections_registry_writer.py  test_collections_service_change_detection.py  test_collections_service_endpoint.py  test_collections_service_registry.py  test_data.py  test_experiment_loader.py  test_experiments.py  test_geek_rating.py  test_loader_load_features.py  test_pipeline.py  test_preprocessor.py  test_raw_data_fixture.py  test_register.py  test_register_model.py  test_sklearn_preprocessor.py  test_train.py  test_transformers.py  test_view.py
text_embeddings_service/: __init__.py  auth.py  main.py  register_model.py
(+209 files in other folders)
