[project]
name = "bgg-predictive-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.34.0",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
]
