[project]
name = "bgg-predictive-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "db-dtypes>=1.4.3",
    "python-dotenv>=1.0.0",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-cloud-storage>=2.14.0",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pathspec>=0.12.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "statsmodels>=0.14.5",
    "streamlit>=1.46.1",
    "streamlit-aggrid>=1.1.6",
    "dotenv>=0.9.9",
    "black>=25.1.0",
    "ruff>=0.12.5",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "joblib>=1.5.1",
    "python-multipart>=0.0.20",
    "umap-learn>=0.5.9.post2",
    "plotnine>=0.15.0",
    "nbformat>=5.10.4",
    "requests>=2.32.4",
    "google-cloud-bigquery-datatransfer>=3.20.0",
]

[dependency-groups]
dev = []

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# pyproject.toml
[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\\(\\) is deprecated:DeprecationWarning',
    "ignore:Skipping features without any observed values:UserWarning:sklearn.impute._base",
]
