[project]
name = "bgg-model-scoring-service"
version = "0.1.0"
description = "BGG Model Scoring Microservice"
readme = "../README.md"
requires-python = ">=3.10"

dependencies = [
    # Core dependencies from main project
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    
    # Web service specific dependencies
    "fastapi>=0.109.2",
    "uvicorn>=0.27.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-pubsub>=2.19.4",
    "python-multipart>=0.0.9",
    "joblib>=1.3.2",
    "pydantic>=2.6.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.24.1",
    "mypy>=1.3.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-version = "3.10"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
